layout update, home and resume page update
update nav order

revert

change pic

update

update

update theme

update Update

fix theme

fix theme 2

icon

icon

icon

icon

more info

more info

update

layout

layout

layout final

projects

layout

update

update

fix type

update

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -196,23 +196,46 @@ ul.task-list input[type="checkbox"] {
   width: 100%;
 
   .more-info {
-    margin-bottom: 5px;
-    margin-top: 5px;
-    font-family: monospace;
+    margin-bottom: 0px;
+    margin-top: 10px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 15px;
 
     p {
       display: inline-block;
-      margin: 0;
+      margin: 3px;
+    }
+
+    div {
+      margin-bottom: 5px; /* Space between each entry */
+      display: flex;       /* Use flexbox for better alignment */
+      align-items: center; /* Vertically center-align items */
+      padding-left: 20px; /* Add space on the left side of each row */
+    }
+
+    img {
+      margin-right: 20px;  /* Space between image and text */
+      width: 20px;         /* Set a consistent width for images */
+      height: 20px;        /* Maintain aspect ratio */
+    }
+
+    a {
+      color: inherit;      /* Maintain text color from parent */
+      text-decoration: none; /* Remove underline */
+    }
+
+    a:hover {
+      text-decoration: underline; /* Underline on hover for better UX */
     }
   }
 }
 
 .profile.float-right {
-  margin-left: 1rem;
+  margin-left: 3rem;
 }
 
 .profile.float-left {
-  margin-right: 1rem;
+  margin-right: 3rem;
 }
 
 @media (min-width: 576px) {
