--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,6 +6,7 @@ body {
   padding-bottom: 70px;
   color: var(--global-text-color);
   background-color: var(--global-bg-color);
+  text-align: justify;
 
   h1,
   h2,
